passed dates update

--- a/call-for-paper-Id-asian-chi-symposium-2021.html
+++ b/call-for-paper-Id-asian-chi-symposium-2021.html
@@ -174,15 +174,15 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <p>Pengiriman Notifikasi kepada Penulis</p>
+                                    <p class="passed-date">Pengiriman Notifikasi kepada Penulis</p>
                                 </td>
-                                <td class="important-date">9 April 2021</td>
+                                <td class="important-date passed-date">9 April 2021</td>
                             </tr>
                             <tr>
                                 <td>
-                                    <p>Pengiriman Naskah Final <i>(Camera Ready)</i> untuk Ronde 1 dan Ronde 2</p>
+                                    <p class="passed-date">Pengiriman Naskah Final <i>(Camera Ready)</i> untuk Ronde 1 dan Ronde 2</p>
                                 </td>
-                                <td class="important-date">20 April 2021</td>
+                                <td class="important-date passed-date">20 April 2021</td>
                             </tr>
                             <tr>
                                 <td>
