--- a/call-for-paper-Jp-asian-chi-symposium-2021.html
+++ b/call-for-paper-Jp-asian-chi-symposium-2021.html
@@ -176,15 +176,15 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <p>採否通知予定日</p>
+                                    <p class="passed-date">採否通知予定日</p>
                                 </td>
-                                <td class="important-date">2021年4月9日</td>
+                                <td class="important-date passed-date">2021年4月9日</td>
                             </tr>
                             <tr>
                                 <td>
-                                    <p>Round1／Round2のカメラレディ論文 提出締切</p>
+                                    <p class="passed-date">Round1／Round2のカメラレディ論文 提出締切</p>
                                 </td>
-                                <td class="important-date">2021年4月20日</td>
+                                <td class="important-date passed-date">2021年4月20日</td>
                             </tr>
                             <tr>
                                 <td>
