--- a/call-for-paper-Kr-asian-chi-symposium-2021.html
+++ b/call-for-paper-Kr-asian-chi-symposium-2021.html
@@ -174,15 +174,15 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <p>Notification of Acceptance (채택 통지)</p>
+                                    <p class="passed-date">Notification of Acceptance (채택 통지)</p>
                                 </td>
-                                <td class="important-date">2021년 4월 9일</td>
+                                <td class="important-date passed-date">2021년 4월 9일</td>
                             </tr>
                             <tr>
                                 <td>
-                                    <p>Submission of Camera Ready Papers Round 1 & Round 2 (카메라 준비 버전 제출)</p>
+                                    <p class="passed-date">Submission of Camera Ready Papers Round 1 & Round 2 (카메라 준비 버전 제출)</p>
                                 </td>
-                                <td class="important-date">2021년 4월 20일</td>
+                                <td class="important-date passed-date">2021년 4월 20일</td>
                             </tr>
                             <tr>
                                 <td>
