--- a/call-for-paper-Malay-asian-chi-symposium-2021.html
+++ b/call-for-paper-Malay-asian-chi-symposium-2021.html
@@ -184,15 +184,15 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <p>Pemberitahuan Penerimaan</p>
+                                    <p class="passed-date">Pemberitahuan Penerimaan</p>
                                 </td>
-                                <td class="important-date">9 April 2021</td>
+                                <td class="important-date passed-date">9 April 2021</td>
                             </tr>
                             <tr>
                                 <td>
-                                    <p>Penyerahan kertas <i>camera-ready</i> Pusingan 1 dan 2</p>
+                                    <p class="passed-date">Penyerahan kertas <i>camera-ready</i> Pusingan 1 dan 2</p>
                                 </td>
-                                <td class="important-date">20 April 2021</td>
+                                <td class="important-date passed-date">20 April 2021</td>
                             </tr>
                             <tr>
                                 <td>
