--- a/call-for-paper-Thai-asian-chi-symposium-2021.html
+++ b/call-for-paper-Thai-asian-chi-symposium-2021.html
@@ -174,15 +174,15 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <p>การแจ้งผลการตอบรับ</p>
+                                    <p class="passed-date">การแจ้งผลการตอบรับ</p>
                                 </td>
-                                <td class="important-date">9 เมษายน 2564</td>
+                                <td class="important-date passed-date">9 เมษายน 2564</td>
                             </tr>
                             <tr>
                                 <td>
-                                    <p>วันสุดท้ายของการส่งบทความวิจัยฉบับสมบูรณ์ รอบ 1 และ รอบ 2</p>
+                                    <p class="passed-date">วันสุดท้ายของการส่งบทความวิจัยฉบับสมบูรณ์ รอบ 1 และ รอบ 2</p>
                                 </td>
-                                <td class="important-date">20 เมษายน 2564</td>
+                                <td class="important-date passed-date">20 เมษายน 2564</td>
                             </tr>
                             <tr>
                                 <td>
