--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                                 <td><del>February 4th, 2021</del></td>
                             </tr>
                             <tr class="near-date">
-                                <th>Notification of Acceptance</th>
-                                <td>March 9th, 2021</td>
+                                <th><del>Notification of Acceptance</del></th>
+                                <td><del>March 9th, 2021</del></td>
                             </tr>
                         </tbody>
                     </table>
@@ -197,8 +197,8 @@
                                 <td><del>March 4th, 2021</del></td>
                             </tr>
                             <tr>
-                                <th>Notification of Acceptance</th>
-                                <td>April 9th, 2021</td>
+                                <th><del>Notification of Acceptance</del></th>
+                                <td><del>April 9th, 2021</del></td>
                             </tr>
                         </tbody>
                     </table>
@@ -207,8 +207,8 @@
                     <table class="index-dates">
                         <tbody>
                             <tr>
-                                <th>Publication-ready Deadline</th>
-                                <td>April 20th, 2021</td>
+                                <th><del>Publication-ready Deadline</del></th>
+                                <td><del>April 20th, 2021</del></td>
                             </tr>
                             <tr>
                                 <th>Asian CHI Symposium 2021</th>
