--- a/call-for-paper-Ch-asian-chi-symposium-2021.html
+++ b/call-for-paper-Ch-asian-chi-symposium-2021.html
@@ -172,15 +172,15 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <p>接收通知</p>
+                                    <p><del>接收通知</del></p>
                                 </td>
-                                <td class="important-date">2021/04/09</td>
+                                <td class="important-date passed-date"><del>2021/04/09</del></td>
                             </tr>
                             <tr>
                                 <td>
-                                    <p>出版论文最终截至日期</p>
+                                    <p class="passed-date">出版论文最终截至日期</p>
                                 </td>
-                                <td class="important-date">2021/04/20</td>
+                                <td class="important-date passed-date">2021/04/20</td>
                             </tr>
                             <tr>
                                 <td>
