--- a/call-for-paper-En-asian-chi-symposium-2021.html
+++ b/call-for-paper-En-asian-chi-symposium-2021.html
@@ -181,15 +181,15 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <p>Notification of Acceptance</p>
+                                    <p class="passed-date">Notification of Acceptance</p>
                                 </td>
-                                <td class="important-date">April 9th, 2021</td>
+                                <td class="important-date passed-date">April 9th, 2021</td>
                             </tr>
                             <tr>
                                 <td>
-                                    <p>Submission of Camera Ready Papers Round 1 & Round 2</p>
+                                    <p class="passed-date">Submission of Camera Ready Papers Round 1 & Round 2</p>
                                 </td>
-                                <td class="important-date">April 20th, 2021</td>
+                                <td class="important-date passed-date">April 20th, 2021</td>
                             </tr>
                             <tr>
                                 <td>
