added yohannes to organizers

--- a/organizers-asian-chi-symposium-2021.html
+++ b/organizers-asian-chi-symposium-2021.html
@@ -148,13 +148,22 @@
                 <div id="separator"></div>
                 <div>
                     <div class="contacts">
-                        <div class="contact eunice">
-
-                            <img width="120px" height="120px" class="chair-picture" alt="publisher-chair" src="images/Eunice_Sari.jpg">
-                            <div class="info-container">
-                                <p style="font-style: bold"><b>Eunice Sari</b></p>
-                                <p class="contact-info">UX Indonesia</p>
-                                <p class="contact-country">Australia</p>
+                        <div class="contact row1">
+                            <div class="contact eunice">
+                                <img width="120px" height="120px" class="chair-picture" alt="publisher-chair" src="images/Eunice_Sari.jpg">
+                                <div class="info-container">
+                                    <p style="font-style: bold"><b>Eunice Sari</b></p>
+                                    <p class="contact-info">UX Indonesia</p>
+                                    <p class="contact-country">Australia</p>
+                                </div>
+                            </div>
+                            <div class="contact yohannes">
+                                <img width="120px" height="120px" class="chair-picture" alt="publisher-chair" src="images/yohannes.jpg">
+                                <div class="info-container">
+                                    <p style="font-style: bold"><b>Yohannes Kurniawan</b></p>
+                                    <p class="contact-info">BINUS University</p>
+                                    <p class="contact-country">Indonesia</p>
+                                </div>
                             </div>
                         </div>
                     </div>
