got rid of keynote

--- a/program-asian-chi-symposium-2021.html
+++ b/program-asian-chi-symposium-2021.html
@@ -328,7 +328,7 @@
                     <div id="line-separator"></div>
                     <div>
                         <h2 id="keynote-speakers">Keynote Speakers</h2>
-                        <h3><b>Keynote 1</b></h3>
+                        <!-- <h3><b>Keynote 1</b></h3> -->
                         <div id="separator"></div>
                         <div id="gierad_laput" class="keynote-desc">
                             <img width="275px" height="275px"class="keynote-img" alt="keynote-1" src="images/gierad_laput.jpg">
@@ -347,7 +347,7 @@
                         </div>
 
                         <div id="separator"></div>
-                        <h3><b>Keynote 2</b></h3>
+                        <!-- <h3><b>Keynote 2</b></h3> -->
                         <div id="hiromi-nakamura" class="keynote-desc">
                             <img width="275px" height="275px"class="keynote-img" alt="keynote-1" src="images/hiromi_nakamura.png">
                             <div class="keynote-bio">
