--- a/program-asian-chi-symposium-2021.html
+++ b/program-asian-chi-symposium-2021.html
@@ -115,6 +115,8 @@
                         <li> <a href="#day-1" style="text-decoration: none; color: #0667DB;">Day 1</a> </li>
                         <li><a href="#day-2" style="text-decoration: none; color: #0667DB;" style="border-left: 0px; padding-left: 0">Day 2</a></li>
                         <li><a href="#keynote-speakers" style="text-decoration: none; color: #0667DB;" style="border-left: 0px; padding-left: 0">Keynote Speakers</a></li>
+                        <li><a href="#paper-sessions" style="text-decoration: none; color: #0667DB;" style="border-left: 0px; padding-left: 0">Paper Sessions</a></li>
+                        <li><a href="#showcase" style="text-decoration: none; color: #0667DB;" style="border-left: 0px; padding-left: 0">Showcase</a></li>
                     </ul>
                     <h5>SIGCHI Asian CHI Symposium programs link can be found <a href="https://programs.sigchi.org/chi/2021/program/content/57150">here</a></h5>
                 </div>
