table body fix for paper sessions

--- a/program-asian-chi-symposium-2021.html
+++ b/program-asian-chi-symposium-2021.html
@@ -558,7 +558,8 @@
                                     </td>
                                 </tr>
                             </tbody>
-                            <div id="separator"></div>
+                        </table>
+                        <div id="separator"></div>
                         <h4>Day 1, Paper Session 3 </h4>
                         <table class="programs-time">
                             <tbody>
