updated main page notice

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
         <div class="updates-tag">
             <div></div>
             <div class="updates-content">
-                <h4><b>Breaking News</b></h4>
-                <p>Apply for a $130 grant from #SIGCHI Development Fund to attend the Asian CHI Symposium 2021 at @CHI2021Yokohama. Send an email containing your full name, affiliation, and 300-word write-up on why you need the grant and what impact you and others will have by attending Asian CHI Symposium 2021 to Josh (Adi Tedjasaputra) (<a href="mailto:josh@uxindo.com">josh@uxindo.com</a>). Thanks to @sigchi, in particular, @nehakumar and her team, who has made this possible.</p>
+                <h4><b>Important Notes about Publications</b></h4>
+                <p>All papers, except the ACM Digital Library-published papers (subject to approval from ACM), will be made available online here on the Asian CHI Symposium website to all registered attendees. We will publish the abstracts of the ACM Digital Library-published papers.</p>
                 <br>
-                <p>The Round 2 Notification has been extended to 9th April 2021</p>
+                <p>Please expect this to be ready by the end of June 2021. Thank you for your patience and understanding.</p>
             </div>
             <div></div>
         </div>
