--- a/index.html
+++ b/index.html
@@ -121,10 +121,12 @@
         <div class="updates-tag">
             <div></div>
             <div class="updates-content">
-                <h4><b>Important Notes about Publications</b></h4>
-                <p>All papers, except the ACM Digital Library-published papers (subject to approval from ACM), will be made available online here on the Asian CHI Symposium website to all registered attendees. We will publish the abstracts of the ACM Digital Library-published papers.</p>
-                <br>
-                <p>Please expect this to be ready by the end of June 2021. Thank you for your patience and understanding.</p>
+                <h4><b>Asian CHI 2021 Publications</b></h4>
+                <ol>
+                    <li><a href="https://dl.acm.org/doi/10.1145/3411763.3441341">Accepted Abstract of Asian CHI 2021</a></li>
+                    <li><a href="https://dl.acm.org/doi/proceedings/10.1145/3429360">Asian CHI 2021 Proceeding </a></li>
+                    <li><a href="https://dl.acm.org/doi/10.1145/3411763.3441341">Asian CHI 2021 Special Publication</a></li>
+                </ol>
             </div>
             <div></div>
         </div>
