--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <ol>
                     <li><a href="https://dl.acm.org/doi/10.1145/3411763.3441341">Accepted Abstract of Asian CHI 2021</a></li>
                     <li><a href="https://dl.acm.org/doi/proceedings/10.1145/3429360">Asian CHI 2021 Proceeding </a></li>
-                    <li><a href="https://dl.acm.org/doi/10.1145/3411763.3441341">Asian CHI 2021 Special Publication</a></li>
+                    <li><a href="https://github.com/asian-chi/2021/blob/master/ACS21-Special%20Publication.pdf">Asian CHI 2021 Special Publication</a></li>
                 </ol>
             </div>
             <div></div>
