--- a/pastEvents-asian-chi-symposium-2021.html
+++ b/pastEvents-asian-chi-symposium-2021.html
@@ -108,7 +108,7 @@
             <div class="main-past-events">
                 <h2><b>Past Asian CHI Symposiums</b></h2>
                 <div id="separator"></div>
-                <ul class="past-events"><
+                <ul class="past-events">
                     <li>Asian CHI Symposium 2021: Call | <a href="https://dl.acm.org/doi/proceedings/10.1145/3429360">Proceedings (ACM DL)</a> | <a href="https://github.com/asian-chi/2021/blob/master/ACS21-Special%20Publication.pdf">Proceedings (Special)</a> </li>
                     <li>Asian CHI Symposium 2020: <a href="https://dl.acm.org/doi/10.1145/3334480.3375068">Call</a> | <a href="https://dl.acm.org/doi/proceedings/10.1145/3391203">Proceedings</a></li>
                     <li>Asian CHI Symposium 2019: <a href="https://dl.acm.org/doi/10.1145/3290607.3298996">Call</a> | <a href="https://dl.acm.org/doi/proceedings/10.1145/3309700">Proceedings</a></li>
